--- a/src/navtech-radar-SDK/ros/ros2/src/nav_camera/CMakeLists.txt
+++ b/src/navtech-radar-SDK/ros/ros2/src/nav_camera/CMakeLists.txt
@@ -19,7 +19,6 @@ find_package(navtech_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(OpenCV REQUIRED)
-find_package(CURL REQUIRED)
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
@@ -33,7 +32,7 @@ add_executable(video_capture_manager
 src/common/video_capture_manager.cpp
 src/common/video_capture_manager_main.cpp)
 
-target_link_libraries(video_capture_manager CURL::libcurl)
+target_link_libraries(video_capture_manager)
 ament_target_dependencies(
 video_capture_manager
 rclcpp
@@ -47,7 +46,7 @@ add_executable(camera_publisher
 src/publishers/camera_publisher_main.cpp
 src/publishers/camera_publisher.cpp)
 
-target_link_libraries(camera_publisher CURL::libcurl)
+target_link_libraries(camera_publisher)
 
 ament_target_dependencies(
 camera_publisher
@@ -62,7 +61,7 @@ add_executable(camera_subscriber
 src/subscribers/camera_subscriber_main.cpp
 src/subscribers/camera_subscriber.cpp)
 
-target_link_libraries(camera_subscriber CURL::libcurl)
+target_link_libraries(camera_subscriber)
 
 ament_target_dependencies(camera_subscriber
 rclcpp
@@ -76,7 +75,7 @@ add_executable(camera_subscriber_to_video
 src/subscribers/camera_subscriber_to_video_main.cpp
 src/subscribers/camera_subscriber_to_video.cpp)
 
-target_link_libraries(camera_subscriber_to_video CURL::libcurl)
+target_link_libraries(camera_subscriber_to_video)
 
 ament_target_dependencies(camera_subscriber_to_video
 rclcpp
